--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,143 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.home-section {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; */
+  background: var(--color-bg-variant);
+  padding: 10rem 0;
+}
+
+#home {
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; */
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
+#home .home-image {
+  width: 25rem;
+  background: var(--color-primary);
+  height: 30rem;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 0rem 0 0 0;
+  padding: 3rem 1rem 0 1rem;
+}
+
+#home .home-image img {
+  width: 100%;
+
+  height: 100%;
+}
+
+/* #home .home-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+  margin: 0 0 2rem 0;
+  line-height: 1.2;
+} */
+
+#home .home-content .home-content-btn {
+  display: flex;
+  margin: 2rem 0.5rem;
+}
+
+#home .home-content .home-content-btn #btn-talk {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+#home .home-content .home-content-btn #btn-talk:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+}
+
+#home .home-content .home-content-btn #btn-download {
+  border: 1px solid var(--color-primary);
+  color: var(--color-primary);
+}
+
+#home .home-content .home-content-btn #btn-download:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+}
+
+#home .home-content .home-content-btn input {
+  background: var(--color-bg);
+  display: flex;
+  margin: 0 0.5rem;
+  padding: 0.7rem 1.5rem;
+  color: var(--color-white);
+  border-radius: 0.5rem;
+}
+
+#home .home-content p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--color-white);
+}
+
+#home .home-content h2 {
+  font-size: 3.5rem;
+  font-weight: 600;
+  color: var(--color-white);
+}
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  float: left;
+  transform: translate(100px, 350px);
+  align-items: center;
+  text-align: center;
+}
+
+.left .icons {
+  font-size: 1.5rem;
+  color: var(--color-primary);
+  margin: 1rem 0;
+}
+
+.left .icons:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+}
+
+.left .div {
+  width: 5px;
+  height: 3rem;
+  background: var(--color-primary);
+}
+
+.right {
+  float: right;
+  transform: translate(-100px, -350px);
+}
+
+.right a {
+  color: var(--color-primary);
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
