--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,3 +1,380 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#experience-section {
+  background: var(--color-bg-variant);
+  padding: 5rem 0 5rem 0;
+}
+
+#experience-section #experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#experience-section #experience .experience-header {
+  margin-bottom: 2rem;
+}
+
+/* #experience-section #experience .experience-header h4{
+  margin-bottom: 2rem;
+} */
+
+#experience-section #experience .experience-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#experience-section #experience .experience-content .experience-left {
+  background: var(--color-bg);
+  margin: 1rem 3rem 0 0;
+  padding: 3rem 8rem 3rem 8rem;
+  border-radius: 1rem;
+  transition: background 0.5s;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content {
+  display: flex;
+  color: var(--color-white);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .left-side {
+  display: flex;
+  flex-direction: column;
+  margin: 0 3rem 0 0;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .left-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .left-side
+  ul
+  .experience-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .left-side
+  ul
+  .experience-icon
+  i {
+  margin-right: 1rem;
+  color: var(--color-primary);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .left-side
+  ul
+  li
+  p {
+  font-size: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .right-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .right-side
+  ul
+  .experience-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .right-side
+  ul
+  .experience-icon
+  i {
+  margin-right: 1rem;
+  color: var(--color-primary);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-content
+  .right-side
+  ul
+  li
+  p {
+  font-size: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-header {
+  color: var(--color-primary);
+  margin: 0 0 1rem 0;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-left
+  .experience-left-header
+  h4 {
+  font-size: 2rem;
+}
+
+#experience-section #experience .experience-content .experience-right {
+  background: var(--color-bg);
+  margin: 1rem 0rem 0 2rem;
+  padding: 3rem 8rem 3rem 8rem;
+  border-radius: 1rem;
+  transition: background 0.5s;
+}
+
+#experience-section #experience .experience-content .experience-left:hover {
+  background: var(--color-bg-variant);
+  border: 1px solid var(--color-primary);
+}
+
+#experience-section #experience .experience-content .experience-right:hover {
+  background: var(--color-bg-variant);
+  border: 1px solid var(--color-primary);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content {
+  display: flex;
+  color: var(--color-white);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side {
+  margin: 0 3rem 0 0;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side
+  ul
+  li
+  p {
+  font-size: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side
+  ul
+  .experience-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .left-side
+  ul
+  .experience-icon
+  i {
+  margin-right: 1rem;
+  color: var(--color-primary);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .right-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .right-side
+  ul
+  li
+  p {
+  font-size: 1rem;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .right-side
+  ul
+  li {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .right-side
+  ul
+  .experience-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-content
+  .right-side
+  ul
+  .experience-icon
+  i {
+  margin-right: 1rem;
+  color: var(--color-primary);
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-header {
+  color: var(--color-primary);
+  font-size: 1.5rem;
+  margin: 0 0 1rem 0;
+}
+
+#experience-section
+  #experience
+  .experience-content
+  .experience-right
+  .experience-right-header
+  h4 {
+  font-size: 2rem;
+}
+
+#experience-section #experience .experience-header h3 {
+  color: var(--color-light);
+  font-size: 1.5rem;
+}
+
+#experience-section #experience .experience-header h2 {
+  color: var(--color-primary);
+  font-size: 2.1rem;
+}
