--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -9,7 +9,7 @@
   justify-content: center;
   text-align: center; */
   background: var(--color-bg-variant);
-  padding: 10rem 0;
+  padding: 5rem 0 5rem 0;
 }
 
 #home {
