--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,3 +1,111 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.projects-section {
+  background: var(--color-bg-variant);
+  padding: 5rem 0;
+}
+
+.projects-section .projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.projects-section .projects .projects-content {
+  display: grid;
+  grid-template-columns: 25rem 25rem 25rem;
+}
+
+.projects-section .projects .projects-content .projects-content-card {
+  padding: 3rem 1rem;
+  margin: 0 2rem 2rem 0;
+  background: var(--color-bg);
+  border-radius: 1rem;
+}
+
+.projects-section .projects .projects-content .projects-content-card:hover {
+  padding: 3rem 1rem;
+  margin: 0 2rem 2rem 0;
+  background: transparent;
+  border-radius: 1rem;
+  border: 2px solid var(--color-bg);
+}
+
+.projects-section
+  .projects
+  .projects-content
+  .projects-content-card
+  .card
+  .projects-btn {
+  display: flex;
+}
+
+.projects-section
+  .projects
+  .projects-content
+  .projects-content-card
+  .card
+  .projects-btn
+  input {
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--color-primary);
+  border-radius: 0.5rem;
+}
+
+.projects-section
+  .projects
+  .projects-content
+  .projects-content-card
+  .card
+  .projects-btn
+  input:hover {
+  background: var(--color-white);
+}
+
+.projects-section
+  .projects
+  .projects-content
+  .projects-content-card
+  .card
+  .projects-btn
+  #demo {
+  background: var(--color-primary);
+  margin-left: 0.5rem;
+}
+
+.projects-section
+  .projects
+  .projects-content
+  .projects-content-card
+  .card
+  .projects-btn
+  #demo:hover {
+  background: var(--color-white);
+}
+
+.projects-section .projects .projects-content .projects-content-card .card p {
+  font-size: 2rem;
+  color: var(--color-white);
+  font-weight: 500;
+  margin: 1rem 0;
+}
+
+.projects-section .projects .projects-content .projects-content-card .card img {
+  width: 100%;
+}
+
+.projects-section .projects .projects-header {
+  margin: 0 0 2rem 0;
+}
+
+.projects-section .projects .projects-header h3 {
+  font-size: 1.5rem;
+}
+
+.projects-section .projects .projects-header h2 {
+  font-size: 2.5rem;
+  color: var(--color-primary);
+}
