--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#footer-section {
+  background: var(--color-primary);
+  padding: 5rem 0;
+}
+
+#footer-section .footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+#footer-section .footer h3 {
+  font-size: 2rem;
+}
+
+#footer-section .footer .footer-nav {
+  margin: 2rem 0;
+}
+
+#footer-section .footer .footer-nav ul {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+#footer-section .footer .footer-nav ul li {
+  padding: 0 2rem;
+}
