--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -33,3 +33,19 @@
 #footer-section .footer .footer-nav ul li {
   padding: 0 2rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  #footer-section .footer .footer-nav ul li {
+    padding: 0 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #footer-section {
+    border: 1px solid red;
+  }
+
+  #footer-section .footer .footer-nav ul li {
+    padding: 0 0.3rem;
+  }
+}
