--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -109,3 +109,35 @@
   font-size: 2.5rem;
   color: var(--color-primary);
 }
+
+@media only screen and (max-width: 1024px) {
+  .projects-section .projects .projects-content {
+    display: grid;
+    grid-template-columns: 28rem 28rem;
+  }
+
+  .projects-section .projects .projects-content .projects-content-card {
+    padding: 3rem 1rem;
+    margin: 0 1rem 2rem 0;
+    background: var(--color-bg);
+    border-radius: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .projects-section .projects .projects-content {
+    display: grid;
+    grid-template-columns: 30rem;
+  }
+
+  .projects-section {
+    border: 1px solid red;
+  }
+
+  /* .projects-section .projects .projects-content .projects-content-card {
+    padding: 3rem 1rem;
+    margin: 0 0.5rem 2rem 0;
+    background: var(--color-bg);
+    border-radius: 1rem;
+  } */
+}
