--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -127,3 +127,45 @@
   color: var(--color-primary);
   font-size: 2rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  #contact-section .contact .contact-content .contact-socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-right: 0rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #contact-section {
+    padding: 2rem 0;
+    background: var(--color-bg-variant);
+    border: 1px solid red;
+  }
+
+  #contact-section .contact .contact-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    flex-direction: column;
+  }
+
+  #contact-section .contact .contact-content .contact-socials div {
+    /* border: 1px solid red; */
+    padding: 3rem 7rem;
+    background: var(--color-light);
+    border-radius: 1rem;
+  }
+
+  #contact-section .contact .contact-content .contact-form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 2rem;
+  }
+}
