--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -126,8 +126,11 @@
 }
 
 .right {
-  float: right;
-  transform: translate(-100px, -350px);
+  /* float: right; */
+  /* transform: translate(-100px, -350px); */
+  transform: rotate(90deg);
+  margin-left: 80%;
+  margin-top: -20%;
 }
 
 .right a {
@@ -140,4 +143,60 @@
   text-align: center;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (max-width: 1024px) {
+  .right {
+    transform: rotate(90deg);
+    margin-left: 80%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .home-section {
+    border: 1px solid red;
+  }
+
+  .left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    float: left;
+    transform: translate(50px, 450px);
+    align-items: center;
+    text-align: center;
+  }
+
+  .right {
+    /* float: right; */
+    /* transform: translate(-100px, -350px); */
+    transform: rotate(90deg);
+    margin-left: 90%;
+    margin-top: -20%;
+  }
+
+  .home-section {
+    /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center; */
+    background: var(--color-bg-variant);
+    padding: 5rem 0 2rem 0;
+  }
+
+  #home .home-image {
+    width: 20rem;
+    background: var(--color-primary);
+    height: 25rem;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: center;
+    margin: 0rem 0 0 0;
+    padding: 3rem 1rem 0 1rem;
+  }
 }
