--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -101,3 +101,56 @@
   color: var(--color-primary);
   font-size: 2rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  #testimonials-section {
+    background: var(--color-bg-variant);
+    padding: 1rem 0;
+  }
+
+  #testimonials-section .testimonials .testimonials-content {
+    display: grid;
+    grid-template-columns: 28rem 28rem;
+    margin: 2rem 0 0 0;
+  }
+
+  #testimonials-section .testimonials .testimonials-content .testimonials-card {
+    background: var(--color-bg);
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 3rem;
+    margin: 1rem 0.5rem;
+    border-radius: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #testimonials-section {
+    background: var(--color-bg-variant);
+    padding: 1rem 0;
+    border: 1px solid red;
+  }
+
+  #testimonials-section .testimonials .testimonials-content {
+    display: grid;
+    grid-template-columns: 30rem;
+    margin: 2rem 0 0 0;
+  }
+
+  /* #testimonials-section .testimonials .testimonials-content .testimonials-card {
+    background: var(--color-bg);
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 3rem;
+    margin: 1rem 0.5rem;
+    border-radius: 1rem;
+  } */
+}
